modules/gdscript/tests/scripts/analyzer/errors/struct_too_many_constructor_args.gd
struct Point:
	var x: int
	var y: int

func test():
	var point: Point = Point(1, 2, 3)
